fix overflow bug

--- a/style.css
+++ b/style.css
@@ -49,7 +49,6 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  overflow: hidden;
 }
 
 #app {
